# Emulator

./: Cargo.toml  README.md
src/: array.rs  break_point.rs  compile.rs  computer.rs  cpu.rs  debug.txt  dependency.rs  display_handler.rs  error.rs  file_handler.rs  instruction_iter.rs  instructions.rs  instructions.txt  loop.txt  main.rs  memory.rs  memory.txt  operand.rs  pattern_ignore_case.rs  program.rs  read_ext.rs  window.rs  write_ext.rs
